src/objects/Stripe_Webhook__c.object
<CustomObject>
    <description>Records created to assist with the processing of delayed webhooks from stripe.</description>
    <fields>
        <fullName>Attempts__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Number of attempts made at processing this webhook</inlineHelpText>
        <label>Attempts</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_ID__c</fullName>
        <label>Event ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Succeeded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Webhook_Data__c</fullName>
        <label>Webhook Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Webhook_Type__c</fullName>
        <label>Webhook Type</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Stripe Webhook</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Attempts__c</columns>
        <columns>Webhook_Type__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HK-{00000}</displayFormat>
        <label>Stripe Webhook #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Webhooks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>